@@ -1,3 +1,4 @@
+# reportbuglib/reportbug_exceptions.py
 # Exceptions for reportbug
 #   Written by Chris Lawrence <lawrencc@debian.org>
 #   (C) 2002-04 Chris Lawrence
