@@ -1,4 +1,4 @@
-# reportbug_submit module - email and GnuPG functions
+# reportbuglib/reportbug_submit module - email and GnuPG functions
 #   Written by Chris Lawrence <lawrencc@debian.org>
 #   Copyright (C) 1999-2006 Chris Lawrence
 #
@@ -39,14 +39,18 @@ from email.MIMEMessage import MIMEMessage
 from email.Header import Header
 import mimetypes
 
-import reportbug
-from reportbug import VERSION, VERSION_NUMBER
-import debianbts
-from rbtempfile import TempFile, open_write_safe, tempfile_prefix
-from reportbug_exceptions import (
+from reportbuglib import reportbug
+from reportbuglib.reportbug import VERSION, VERSION_NUMBER
+from reportbuglib import debianbts
+from reportbuglib.rbtempfile import (
+    TempFile,
+    open_write_safe,
+    tempfile_prefix,
+    )
+from reportbuglib.reportbug_exceptions import (
     NoMessage,
     )
-import reportbug_ui_text as ui
+from reportbuglib import reportbug_ui_text as ui
 
 quietly = False
 
